fix: filter bg overflow

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -215,7 +215,7 @@ input[type="range"]
   &-Filter
     position: sticky
     z-index: 999
-    top: calc(2rem + 1.55rem)
+    top: calc(2rem + 1.54rem)
     left: 0
     right: 0
     // border-top: 1px solid currentColor
